kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-astar-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-astar-container
          image: aryanpatel111/astar-shortest-path-finder
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"  # Request 100 milliCPU (0.1 CPU)
              memory: "512Mi"  # Minimum request of 512 Mebibytes of memory
            limits:
              cpu: "200m"  # Limit to 200 milliCPU (0.2 CPU)
              memory: "1Gi"
