kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-Astar-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: LoadBalancer
